--- a/css/styles.css
+++ b/css/styles.css
@@ -202,6 +202,13 @@ nav a:hover {
   clear: both;
 }
 
+footer {
+    background: black;
+    color: white;
+}
+footer #right {
+    float: right;
+}
 /* ==========================================================================
    GRID SYSTEM
    ========================================================================== */
